Make dialogs look consistent

--- a/RedditVideoGenerator/AboutWindow.xaml
+++ b/RedditVideoGenerator/AboutWindow.xaml
@@ -8,7 +8,7 @@
     xmlns:ui="http://schemas.lepo.co/wpfui/2022/xaml"
     Title="About RedditVideoGenerator"
     Width="420"
-    Height="441"
+    Height="437"
     d:WindowStyle="None"
     Background="{ui:ThemeResource ApplicationBackgroundBrush}"
     ExtendsContentIntoTitleBar="True"
@@ -17,6 +17,7 @@
     WindowBackdropType="Mica"
     WindowCornerPreference="Round"
     WindowStartupLocation="CenterScreen"
+    WindowStyle="SingleBorderWindow"
     mc:Ignorable="d">
     <Grid>
         <ui:TitleBar
@@ -97,20 +98,34 @@
             </StackPanel>
 
             <Grid
+                x:Name="FooterGrid"
                 Grid.Row="1"
-                Margin="0,10,0,0"
-                VerticalAlignment="Top"
-                Background="{DynamicResource ControlFillColorDefaultBrush}">
-                <ui:Button
-                    x:Name="CloseBtn"
-                    Width="200"
-                    Margin="15"
-                    HorizontalAlignment="Center"
-                    Appearance="Primary"
-                    Click="CloseBtn_Click"
-                    Content="Close" />
-            </Grid>
+                Margin="0,10,0,0">
+                <Border
+                    Padding="12"
+                    BorderBrush="{DynamicResource ControlElevationBorderBrush}"
+                    BorderThickness="1"
+                    CornerRadius="0">
+                    <Border.Background>
+                        <SolidColorBrush Color="{DynamicResource SubtleFillColorSecondary}" />
+                    </Border.Background>
+                    <Grid>
+                        <Grid x:Name="FooterButtonsGrid">
+                            <Grid.ColumnDefinitions>
+                                <ColumnDefinition Width="*" />
+                            </Grid.ColumnDefinitions>
 
+                            <ui:Button
+                                x:Name="CloseBtn"
+                                Grid.Column="0"
+                                HorizontalAlignment="Stretch"
+                                Appearance="Primary"
+                                Click="CloseBtn_Click"
+                                Content="Close" />
+                        </Grid>
+                    </Grid>
+                </Border>
+            </Grid>
         </Grid>
     </Grid>
 </ui:UiWindow>
