--- a/RedditVideoGenerator/YTSignInDialog.xaml
+++ b/RedditVideoGenerator/YTSignInDialog.xaml
@@ -7,7 +7,7 @@
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
     xmlns:ui="http://schemas.lepo.co/wpfui/2022/xaml"
     Title="Sign in to YouTube"
-    Width="450"
+    Width="420"
     Height="230"
     MinHeight="0"
     d:WindowStyle="None"
@@ -19,6 +19,7 @@
     WindowBackdropType="Mica"
     WindowCornerPreference="Round"
     WindowStartupLocation="CenterScreen"
+    WindowStyle="SingleBorderWindow"
     mc:Ignorable="d">
     <Grid>
         <ui:TitleBar
@@ -64,27 +65,46 @@
                 Source="/Resources/YTLight.png" />
 
             <Grid
+                x:Name="FooterGrid"
                 Grid.Row="2"
-                Margin="-10,10,-10,0"
-                Background="{DynamicResource ControlFillColorDefaultBrush}">
-                <ui:Button
-                    x:Name="SignInBtn"
-                    Width="230"
-                    Margin="15,15,0,15"
-                    HorizontalAlignment="Left"
-                    Appearance="Primary"
-                    Click="SignInBtn_Click"
-                    Content="Sign in to your YouTube account"
-                    IsDefault="True" />
-                <ui:Button
-                    x:Name="CancelBtn"
-                    Width="180"
-                    Margin="0,15,15,15"
-                    HorizontalAlignment="Right"
-                    Click="CancelBtn_Click"
-                    Content="Cancel"
-                    IsDefault="True" />
+                Margin="-10,10,-10,0">
+                <Border
+                    Padding="12"
+                    BorderBrush="{DynamicResource ControlElevationBorderBrush}"
+                    BorderThickness="1"
+                    CornerRadius="0">
+                    <Border.Background>
+                        <SolidColorBrush Color="{DynamicResource SubtleFillColorSecondary}" />
+                    </Border.Background>
+                    <Grid>
+                        <Grid x:Name="FooterButtonsGrid">
+                            <Grid.ColumnDefinitions>
+                                <ColumnDefinition Width="*" />
+                                <ColumnDefinition Width="*" />
+                            </Grid.ColumnDefinitions>
+
+                            <ui:Button
+                                x:Name="SignInBtn"
+                                Grid.Column="0"
+                                Margin="0,0,4,0"
+                                HorizontalAlignment="Stretch"
+                                Appearance="Primary"
+                                Click="SignInBtn_Click"
+                                Content="Sign in to YouTube"
+                                IsDefault="True" />
+
+                            <ui:Button
+                                x:Name="CancelBtn"
+                                Grid.Column="1"
+                                Margin="4,0,0,0"
+                                HorizontalAlignment="Stretch"
+                                Click="CancelBtn_Click"
+                                Content="Cancel" />
+                        </Grid>
+                    </Grid>
+                </Border>
             </Grid>
+
         </Grid>
     </Grid>
 </ui:UiWindow>
