--- a/RedditVideoGenerator/Controls/ThumbnailImage.xaml
+++ b/RedditVideoGenerator/Controls/ThumbnailImage.xaml
@@ -128,13 +128,17 @@
                     TextWrapping="Wrap" />
             </StackPanel>
 
-            <Image
+            <Grid
                 Width="250"
-                Height="170"
+                Height="250"
                 Margin="0,0,40,40"
                 HorizontalAlignment="Right"
-                VerticalAlignment="Bottom"
-                Source="/Resources/TransparentChannelIcon.png" />
+                VerticalAlignment="Bottom">
+                <Image
+                    Width="250"
+                    Height="250"
+                    Source="/Resources/TransparentChannelIcon.png" />
+            </Grid>
         </Grid>
     </Border>
 </UserControl>
