Added docs button and replaced outro video

--- a/RedditVideoGenerator/Controls/ThumbnailImage.xaml
+++ b/RedditVideoGenerator/Controls/ThumbnailImage.xaml
@@ -137,7 +137,7 @@
                 <Image
                     Width="250"
                     Height="250"
-                    Source="/Resources/TransparentChannelIcon.png" />
+                    Source="/Resources/ChannelIcon.png" />
             </Grid>
         </Grid>
     </Border>
