--- a/RedditVideoGenerator/AboutWindow.xaml
+++ b/RedditVideoGenerator/AboutWindow.xaml
@@ -7,8 +7,8 @@
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
     xmlns:ui="http://schemas.lepo.co/wpfui/2022/xaml"
     Title="About RedditVideoGenerator"
-    Width="420"
-    Height="437"
+    Width="440"
+    Height="471"
     d:WindowStyle="None"
     Background="{ui:ThemeResource ApplicationBackgroundBrush}"
     ExtendsContentIntoTitleBar="True"
@@ -58,6 +58,14 @@
 
                 <ui:Hyperlink
                     Margin="0,10,0,0"
+                    HorizontalAlignment="Center"
+                    Content="View more info/Learn how to use RedditVideoGenerator"
+                    FontSize="14"
+                    Icon="Link48"
+                    NavigateUri="https://github.com/Apollo199999999/RedditVideoGenerator/blob/main/README.md" />
+
+                <ui:Hyperlink
+                    Margin="0,5,0,0"
                     HorizontalAlignment="Center"
                     Content="Visit RedditVideoGenerator's GitHub respository"
                     FontSize="14"
