--- a/RedditVideoGenerator/MainWindow.xaml
+++ b/RedditVideoGenerator/MainWindow.xaml
@@ -21,6 +21,12 @@
     WindowCornerPreference="Round"
     WindowStartupLocation="CenterScreen"
     mc:Ignorable="d">
+    <Window.Resources>
+        <Style BasedOn="{StaticResource DefaultToolTipStyle}" TargetType="ToolTip">
+            <Setter Property="TextBlock.TextAlignment" Value="Left" />
+        </Style>
+    </Window.Resources>
+
     <Grid>
         <ui:TitleBar
             Title="RedditVideoGenerator - Generate r/AskReddit Reddit videos and upload them to YouTube automatically"
@@ -30,6 +36,7 @@
         <Grid Margin="20,51,20,20">
             <Grid.ColumnDefinitions>
                 <ColumnDefinition Width="*" />
+                <ColumnDefinition Width="auto" />
                 <ColumnDefinition Width="auto" />
             </Grid.ColumnDefinitions>
             <Grid.RowDefinitions>
@@ -49,22 +56,36 @@
             </StackPanel>
 
             <ui:Button
-                x:Name="AboutBtn"
+                x:Name="HelpBtn"
                 Grid.Row="0"
                 Grid.Column="1"
-                Width="40"
-                Height="40"
-                Padding="0"
-                HorizontalAlignment="Right"
                 VerticalAlignment="Center"
-                Click="AboutBtn_Click">
-                <ui:SymbolIcon FontSize="24" Symbol="Info24" />
-            </ui:Button>
+                VerticalContentAlignment="Center"
+                Click="DocsBtn_Click"
+                Content="Docs"
+                Icon="Book24"
+                Loaded="IconBtn_Loaded"
+                ToolTipService.InitialShowDelay="0"
+                ToolTipService.ToolTip="Learn about how RedditVideoGenerator works and how to customise it." />
+
+            <ui:Button
+                x:Name="AboutBtn"
+                Grid.Row="0"
+                Grid.Column="2"
+                Margin="10,0,0,0"
+                VerticalAlignment="Center"
+                VerticalContentAlignment="Center"
+                Click="AboutBtn_Click"
+                Content="About"
+                Icon="Info24"
+                Loaded="IconBtn_Loaded"
+                ToolTipService.InitialShowDelay="0"
+                ToolTipService.ToolTip="View technical information and links about RedditVideoGenerator." />
 
             <TextBox
                 x:Name="ConsoleOutput"
                 Grid.Row="1"
-                Grid.ColumnSpan="2"
+                Grid.ColumnSpan="3"
                 Margin="0,10,0,0"
                 VerticalAlignment="Stretch"
                 FontFamily="/Resources/CascadiaCode/#Cascadia Code"
