--- a/RedditVideoGenerator/AboutWindow.xaml
+++ b/RedditVideoGenerator/AboutWindow.xaml
@@ -7,7 +7,7 @@
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
     xmlns:ui="http://schemas.lepo.co/wpfui/2022/xaml"
     Title="About RedditVideoGenerator"
-    Width="440"
+    Width="420"
     Height="471"
     d:WindowStyle="None"
     Background="{ui:ThemeResource ApplicationBackgroundBrush}"
@@ -59,7 +59,7 @@
                 <ui:Hyperlink
                     Margin="0,10,0,0"
                     HorizontalAlignment="Center"
-                    Content="View more info/Learn how to use RedditVideoGenerator"
+                    Content="View more info about RedditVideoGenerator"
                     FontSize="14"
                     Icon="Link48"
                     NavigateUri="https://github.com/Apollo199999999/RedditVideoGenerator/blob/main/README.md" />
